--- a/src/App.css
+++ b/src/App.css
@@ -41,11 +41,11 @@ transform: matrix(1, 0, -0.03, 1, 0, 0);
    
 }
 
-.codeBlock-border {
+/* .codeBlock-border {
     border: 1px solid;
     z-index: 1;
     border-image-source: linear-gradient(121.74deg, rgba(255, 255, 255, 0.22) -7.75%, rgba(255, 255, 255, 0) 37.38%);
-}
+} */
 
 .homepage_bg {
     background-image: url("../src/assets/Images/bghome.svg");
@@ -77,6 +77,59 @@ transform: matrix(1, 0, -0.03, 1, 0, 0);
     border-bottom: 1px double #444;
   }
 
+  .codeblock2 {
+    position: absolute;
+    width: 372.95px;
+    height: 257.05px;
+    left: calc(50% - 372.95px / 2 - 76.53px);
+    top: calc(50% - 257.05px / 2 - 47.47px);
+    border-radius: 100%;
+    background: linear-gradient(
+      118.19deg,
+      #1fa2ff -3.62%,
+      #12d8fa 50.44%,
+      #a6ffcb 104.51%
+    );
+    opacity: 0.2;
+    filter: blur(34px);
+    transform: matrix(1, 0, -0.03, 1, 0, 0);
+  }
+  
+.codeblock1 {
+  width: 372.95px;
+  height: 257.05px;
+  border-radius: 100%;
+  left: calc(80% - 372.95px / 2 - 76.53px);
+  top: calc(60% - 257.05px / 2 - 47.47px);
+  background: linear-gradient(
+    123.77deg,
+    #8a2be2 -6.46%,
+    #ffa500 59.04%,
+    #f8f8ff 124.53%
+  );
+  opacity: 0.2;
+  filter: blur(34px);
+  transform: matrix(1, 0, -0.03, 1, 0, 0);
+}
+
+
+.codeblock2 {
+  position: absolute;
+  width: 372.95px;
+  height: 257.05px;
+  left: calc(30% - 372.95px / 2 - 76.53px);
+  top: calc(80% - 257.05px / 2 - 47.47px);
+  border-radius: 100%;
+  background: linear-gradient(
+    118.19deg,
+    #1fa2ff -3.62%,
+    #12d8fa 50.44%,
+    #a6ffcb 104.51%
+  );
+  opacity: 0.2;
+  filter: blur(34px);
+  transform: matrix(1, 0, -0.03, 1, 0, 0);
+}
   .box-drop-shadow {
     box-shadow: -20px -20px 0px 0px #FFFFFF ;
   }
