--- a/src/App.css
+++ b/src/App.css
@@ -3,42 +3,61 @@
 @tailwind utilities;
 
 
-html,body {
-    overflow-x: hidden;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+html,
+body {
+  overflow-x: hidden;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 
-.box-shadow-3d{
-    box-shadow: 21px 21px 0px #fff,
-                0px 0px 10px rgb(10 90 114 / 0.5),
-                0px 0px 10px rgb(10 90 114 / 0.5),
-                0px 0px 10px rgb(10 90 114 / 0.5),
-                0px 0px 100px rgb(10 90 114 / 0.5),
-                0px 0px 0px rgb(10 90 114 / 0.5);
+.box-shadow-3d {
+  box-shadow: 21px 21px 0px #fff,
+    0px 0px 10px rgb(10 90 114 / 0.5),
+    0px 0px 10px rgb(10 90 114 / 0.5),
+    0px 0px 10px rgb(10 90 114 / 0.5),
+    0px 0px 100px rgb(10 90 114 / 0.5),
+    0px 0px 0px rgb(10 90 114 / 0.5);
 }
 
 .gradient-text {
-    background: -webkit-linear-gradient(118.19deg, #1FA2FF -3.62%, #12D8FA 50.44%, #A6FFCB 104.51%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  background: -webkit-linear-gradient(118.19deg, #1FA2FF -3.62%, #12D8FA 50.44%, #A6FFCB 104.51%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
+.gradient-text-semi-yellow {
+  background: linear-gradient(117.83deg, #FF512F -4.8%, #F09819 107.46%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.gradient-text-yellow {
+  background:
+    linear-gradient(118.41deg, #E65C00 -6.05%, #F9D423 106.11%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+
+.gradient-text-red {
+  background: linear-gradient(117.95deg, #833AB4 -2.4%, #FD1D1D 52.25%, #FCB045 106.89%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 .background-gradient {
-  
-width: 372.95px;
-height: 257.05px;
-left: calc(50% - 372.95px/2 - 76.53px);
-top: calc(50% - 257.05px/2 - 47.47px);
+  width: 372.95px;
+  height: 257.05px;
+  left: calc(50% - 372.95px/2 - 76.53px);
+  top: calc(50% - 257.05px/2 - 47.47px);
 
-/* Gradient/05 */
+  /* Gradient/05 */
 
-background: linear-gradient(118.19deg, #1FA2FF -3.62%, #12D8FA 50.44%, #A6FFCB 104.51%);
+  background: linear-gradient(118.19deg, #1FA2FF -3.62%, #12D8FA 50.44%, #A6FFCB 104.51%);
 
-filter: blur(34px);
-transform: matrix(1, 0, -0.03, 1, 0, 0);
-   
+  filter: blur(34px);
+  transform: matrix(1, 0, -0.03, 1, 0, 0);
+
 }
 
 /* .codeBlock-border {
@@ -48,65 +67,62 @@ transform: matrix(1, 0, -0.03, 1, 0, 0);
 } */
 
 .homepage_bg {
-    background-image: url("../src/assets/Images/bghome.svg");
+  background-image: url("../src/assets/Images/bghome.svg");
 }
 
 
-  .numberCircle {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    background: rgba(177, 207, 219, 1);
-    color: white;
-    text-align: center;
-    line-height: 50px;
-    font-weight: 600;
-    font-size: 16px;
-    margin: 5px 0;
-    position: relative;
-  }
-  .numberCircle:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    height: 50px;
-    width: 1px;
-    background: #AFB2BF;
-    transform: translate(-50%, 100%);
-    border-bottom: 1px double #444;
-  }
+.numberCircle {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background: rgba(177, 207, 219, 1);
+  color: white;
+  text-align: center;
+  line-height: 50px;
+  font-weight: 600;
+  font-size: 16px;
+  margin: 5px 0;
+  position: relative;
+}
 
-  .codeblock2 {
-    position: absolute;
-    width: 372.95px;
-    height: 257.05px;
-    left: calc(50% - 372.95px / 2 - 76.53px);
-    top: calc(50% - 257.05px / 2 - 47.47px);
-    border-radius: 100%;
-    background: linear-gradient(
-      118.19deg,
+.numberCircle:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  height: 50px;
+  width: 1px;
+  background: #AFB2BF;
+  transform: translate(-50%, 100%);
+  border-bottom: 1px double #444;
+}
+
+.codeblock2 {
+  position: absolute;
+  width: 372.95px;
+  height: 257.05px;
+  left: calc(50% - 372.95px / 2 - 76.53px);
+  top: calc(50% - 257.05px / 2 - 47.47px);
+  border-radius: 100%;
+  background: linear-gradient(118.19deg,
       #1fa2ff -3.62%,
       #12d8fa 50.44%,
-      #a6ffcb 104.51%
-    );
-    opacity: 0.2;
-    filter: blur(34px);
-    transform: matrix(1, 0, -0.03, 1, 0, 0);
-  }
-  
+      #a6ffcb 104.51%);
+  opacity: 0.2;
+  filter: blur(34px);
+  transform: matrix(1, 0, -0.03, 1, 0, 0);
+}
+
 .codeblock1 {
   width: 372.95px;
   height: 257.05px;
   border-radius: 100%;
   left: calc(80% - 372.95px / 2 - 76.53px);
   top: calc(60% - 257.05px / 2 - 47.47px);
-  background: linear-gradient(
-    123.77deg,
-    #8a2be2 -6.46%,
-    #ffa500 59.04%,
-    #f8f8ff 124.53%
-  );
+  background: linear-gradient(123.77deg,
+      #8a2be2 -6.46%,
+      #ffa500 59.04%,
+      #f8f8ff 124.53%);
   opacity: 0.2;
   filter: blur(34px);
   transform: matrix(1, 0, -0.03, 1, 0, 0);
@@ -130,16 +146,23 @@ input[type=number] {
   left: calc(30% - 372.95px / 2 - 76.53px);
   top: calc(80% - 257.05px / 2 - 47.47px);
   border-radius: 100%;
-  background: linear-gradient(
-    118.19deg,
-    #1fa2ff -3.62%,
-    #12d8fa 50.44%,
-    #a6ffcb 104.51%
-  );
+  background: linear-gradient(118.19deg,
+      #1fa2ff -3.62%,
+      #12d8fa 50.44%,
+      #a6ffcb 104.51%);
   opacity: 0.2;
   filter: blur(34px);
   transform: matrix(1, 0, -0.03, 1, 0, 0);
 }
-  .box-drop-shadow {
-    box-shadow: -20px -20px 0px 0px #FFFFFF ;
-  }
+
+.box-drop-shadow {
+  box-shadow: -20px -20px 0px 0px #FFFFFF;
+}
+
+
+.form-style {
+  @apply rounded-lg bg-richblack-700 p-3 text-[16px] leading-[24px] text-richblack-5 shadow-[0_1px_0_0] shadow-white/50 placeholder:text-richblack-400 focus:outline-none;
+}
+.lable-style {
+  @apply text-[14px] text-richblack-5;
+}
