--- a/src/App.css
+++ b/src/App.css
@@ -168,3 +168,14 @@ input[type=number] {
 }
 
 .swiper-button-next { color: red; }
+
+.yellowButton {
+  @apply cursor-pointer rounded-md bg-yellow-50 px-[20px] py-[8px] font-semibold text-richblack-900;
+}
+.blackButton {
+  @apply cursor-pointer rounded-md bg-richblack-800 px-[20px] py-[8px] font-semibold text-richblack-5;
+}
+.swiper-slide {
+  width: 100%;
+  height: 100%;
+}
